--- a/src/MyMvvmCrossApp1.Core/MyMvvmCrossApp1.Core.csproj
+++ b/src/MyMvvmCrossApp1.Core/MyMvvmCrossApp1.Core.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
     <PackageReference Include="MvvmCross" Version="8.0.2" />
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2125" />
   </ItemGroup>
 
 </Project>
